--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,15 @@ redis:
       max-wait: 100
       max-active: 100
 
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      username: ${MYSQL-USER:root}
+      password: ${MYSQL-PWD:root}
+      url: jdbc:mysql://${MYSQL-HOST:bukeneng-mysql}:${MYSQL-PORT:3306}/${MYSQL-DB:bukenengx_opm}?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true&allowPublicKeyRetrieval=true
+
 forest:
   log-response-content: true
   max-connections: 100
@@ -27,3 +36,10 @@ ai-draw:
 
 oss:
   bookDomain: https://eee.com
+
+# 配置文件加密根密码
+jasypt:
+  encryptor:
+    password: pigx
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
