--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>assertj-core</artifactId>
             <version>3.19.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>2021.1</version>
+        </dependency>
     </dependencies>
 
     <build>
