--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.pigliu</groupId>
     <artifactId>redis-case</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>redis-case</name>
     <description>redis-case</description>
     <packaging>jar</packaging>
